# letsrun-reaction-times

./: README.md  pyproject.toml
data/: reactiontimes.csv  reactiontimes_preprocessed.csv  sources-combined.csv
data/sources/: sources-combined.csv  sources-oly.csv  sources-wc.csv
letsrun/: ReactionTimes.csv  Tokyo.csv  analysis.ipynb  analyze.py  main.py  scrape.py
letsrun/scrape/: README.md  get_all_sources.py  get_data.py  get_overview_tables.py  preprocess.py
results/: summary.csv
tests/: test_letsrun.py
