[tool.poetry]
name = "letsrun"
version = "0.1.0"
description = ""
authors = ["Thomas Camminady <0milieux_member@icloud.com>"]

[tool.poetry.dependencies]
python = "=3.10"
numpy = "^1.23.1"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
ipykernel = "^6.15.1"
jupyter = "^1.0.0"
lxml = "^4.9.1"
rich = "^12.5.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
